[project]
name = "comfyui-alchemine-pack"
description = "Custom nodes pack for ComfyUI"
version = "0.1.6"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/alchemine/comfyui-alchemine-pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alchemine"
DisplayName = "ComfyUI-Alchemine-Pack"
Icon = ""
